--- a/index.html
+++ b/index.html
@@ -418,6 +418,7 @@
     
 <script>
 document.addEventListener("DOMContentLoaded", function () {
+  emailjs.init("lK76KGFPVwTGiY9vX"); 
   const materialSelect = document.getElementById("material");
 
   function showAnalyzerSection(value) {
