--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
       })
       .then(link => {
         const templateParams = {
-          to: email,
+          to: `${email}, science.techade@gmail.com`,
           email: email,
           company: form.company.value,
           date: form.date.value,
