--- a/index.html
+++ b/index.html
@@ -418,34 +418,24 @@
     
 <!-- Подключение актуального EmailJS SDK (v3) -->
 <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
-
-
 <script>
   document.addEventListener("DOMContentLoaded", function () {
     emailjs.init("lK76KGFPVwTGiY9vX");
 
     const materialSelect = document.getElementById("material");
-
-    function showAnalyzerSection(value) {
-      document.querySelectorAll('.analyzer-section').forEach(section => {
-        section.style.display = 'none';
-      });
-      if (value) {
-        const section = document.getElementById(`section-${value}`);
-        if (section) {
-          section.style.display = 'block';
-        }
-      }
-    }
-
-    materialSelect.addEventListener("change", function () {
-      showAnalyzerSection(this.value);
-    });
-
+    materialSelect.addEventListener("change", () => showAnalyzerSection(materialSelect.value));
     showAnalyzerSection(materialSelect.value);
 
     ["pulp", "sinter", "multiplex", "courier"].forEach(bindPhotoPreview);
   });
+
+  function showAnalyzerSection(value) {
+    document.querySelectorAll('.analyzer-section').forEach(section => {
+      section.style.display = 'none';
+    });
+    const section = document.getElementById(`section-${value}`);
+    if (section) section.style.display = 'block';
+  }
 
   function bindPhotoPreview(section) {
     const input = document.getElementById(`installation_photo_${section}`);
@@ -480,26 +470,57 @@
     });
   }
 
-  function submitForm() {
-    const form = document.getElementById("form");
-    const pdfContent = document.getElementById("pdf-content");
-    const pdfPreview = document.getElementById("pdf-preview");
+  function generatePrintableContent() {
+    const original = document.getElementById("form");
+    const clone = original.cloneNode(true);
 
-    // Удаляем неподдерживаемые изображения
-    pdfContent.querySelectorAll("img").forEach(img => {
-      if (
-        !img.src ||
-        img.src === window.location.href ||
-        img.src === "about:blank" ||
-        img.src.startsWith("data:image/svg") ||
-        img.src.startsWith("blob:")
-      ) {
-        img.remove();
-      }
+    // Заменяем все поля ввода и select на текст
+    clone.querySelectorAll("input, select, textarea").forEach(el => {
+      const value = el.type === "checkbox" ? (el.checked ? "✔ Да" : "— Нет") : el.value;
+      const span = document.createElement("div");
+      span.textContent = value;
+      span.style.marginBottom = "4px";
+      el.replaceWith(span);
     });
 
-    // Удаляем превью установки
-    pdfContent.querySelectorAll("img[id^='installation_preview_']").forEach(img => img.remove());
+    // Удаляем кнопки
+    clone.querySelectorAll("button").forEach(btn => btn.remove());
+
+    return clone;
+  }
+
+  function addElementRow(containerId) {
+    const container = document.getElementById(containerId);
+    const wrapper = document.createElement("div");
+    wrapper.className = "element-row";
+
+    const inputElement = document.createElement("input");
+    inputElement.type = "text";
+    inputElement.placeholder = "Элемент (напр. Fe)";
+    inputElement.name = `${containerId}_element[]`;
+    inputElement.className = "form-control";
+
+    const inputRange = document.createElement("input");
+    inputRange.type = "text";
+    inputRange.placeholder = "Диапазон концентрации";
+    inputRange.name = `${containerId}_range[]`;
+    inputRange.className = "form-control";
+
+    const removeBtn = document.createElement("button");
+    removeBtn.type = "button";
+    removeBtn.className = "btn btn-outline-danger btn-sm";
+    removeBtn.textContent = "Удалить";
+    removeBtn.onclick = () => wrapper.remove();
+
+    wrapper.appendChild(inputElement);
+    wrapper.appendChild(inputRange);
+    wrapper.appendChild(removeBtn);
+    container.appendChild(wrapper);
+  }
+
+  function submitForm() {
+    const form = document.getElementById("form");
+    const pdfPreview = document.getElementById("pdf-preview");
 
     const material = form.material.value;
     const photoInput = document.getElementById(`installation_photo_${material}`);
@@ -514,22 +535,15 @@
       tempImg.src = jpegData;
       tempImg.style.maxWidth = "100%";
       tempImg.style.marginTop = "10px";
-      pdfContent.appendChild(tempImg);
+      document.getElementById("pdf-content").appendChild(tempImg);
     }
 
-    // Удаляем SVG и background-image
-    pdfContent.querySelectorAll("svg").forEach(svg => svg.remove());
-    pdfContent.querySelectorAll("*").forEach(el => {
-      const style = window.getComputedStyle(el);
-      if (style.backgroundImage && style.backgroundImage !== 'none') {
-        el.style.backgroundImage = 'none';
-      }
-    });
+    const printableContent = generatePrintableContent();
 
     html2pdf().set({
       html2canvas: { scale: 2, useCORS: true },
       jsPDF: { unit: 'mm', format: 'a4', orientation: 'portrait' }
-    }).from(pdfContent).output('datauristring')
+    }).from(printableContent).output('datauristring')
       .then(pdfDataUri => {
         pdfPreview.src = pdfDataUri;
         pdfPreview.style.display = 'block';
@@ -538,12 +552,11 @@
           filename: 'oprosny_list.pdf',
           html2canvas: { scale: 2, useCORS: true },
           jsPDF: { unit: 'mm', format: 'a4', orientation: 'portrait' }
-        }).from(pdfContent).outputPdf('blob');
+        }).from(printableContent).outputPdf('blob');
       })
       .then(pdfBlob => {
         const formData = new FormData();
         formData.append("file", new File([pdfBlob], "oprosny_list.pdf", { type: "application/pdf" }));
-
         return fetch("https://tmpfiles.org/api/v1/upload", {
           method: "POST",
           body: formData
@@ -581,42 +594,7 @@
         if (tempImg) tempImg.remove();
       });
   }
-
-  function addElementRow(containerId) {
-  const container = document.getElementById(containerId);
-  const wrapper = document.createElement("div");
-  wrapper.className = "element-row";
-
-  const inputElement = document.createElement("input");
-  inputElement.type = "text";
-  inputElement.placeholder = "Элемент (напр. Fe)";
-  inputElement.name = `${containerId}_element[]`;
-  inputElement.className = "form-control";
-
-  const inputRange = document.createElement("input");
-  inputRange.type = "text";
-  inputRange.placeholder = "Диапазон концентрации";
-  inputRange.name = `${containerId}_range[]`;
-  inputRange.className = "form-control";
-
-  const removeBtn = document.createElement("button");
-  removeBtn.type = "button";
-  removeBtn.className = "btn btn-outline-danger btn-sm";
-  removeBtn.textContent = "Удалить";
-  removeBtn.onclick = () => wrapper.remove();
-
-  wrapper.appendChild(inputElement);
-  wrapper.appendChild(inputRange);
-  wrapper.appendChild(removeBtn);
-
-  container.appendChild(wrapper);
-}
-
 </script>
-
-
-
-
 
 
 
