--- a/index.html
+++ b/index.html
@@ -417,19 +417,76 @@
 
     
 <!-- Подключение актуального EmailJS SDK (v3) -->
+<script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 <script>
-  function generatePrintableContent(form, material) {
-    const original = document.getElementById("pdf-content");
-    const clone = original.cloneNode(true);
+  document.addEventListener("DOMContentLoaded", function () {
+    emailjs.init("lK76KGFPVwTGiY9vX");
 
-    // Показываем только активную секцию
+    const materialSelect = document.getElementById("material");
+    materialSelect.addEventListener("change", () => {
+      showAnalyzerSection(materialSelect.value);
+    });
+
+    showAnalyzerSection(materialSelect.value);
+
+    ["pulp", "sinter", "multiplex", "courier"].forEach(bindPhotoPreview);
+
+    document.getElementById("submit-button").addEventListener("click", submitForm);
+  });
+
+  function showAnalyzerSection(value) {
+    document.querySelectorAll('.analyzer-section').forEach(section => {
+      section.style.display = 'none';
+    });
+    const section = document.getElementById(`section-${value}`);
+    if (section) section.style.display = 'block';
+  }
+
+  function bindPhotoPreview(section) {
+    const input = document.getElementById(`installation_photo_${section}`);
+    const preview = document.getElementById(`installation_preview_${section}`);
+    if (!input || !preview) return;
+
+    input.addEventListener("change", function () {
+      const file = this.files[0];
+      if (!file || !file.type.match(/^image\/(jpe?g|png)$/)) {
+        alert("Загрузите JPG или PNG.");
+        return;
+      }
+
+      const reader = new FileReader();
+      reader.onload = function (e) {
+        const img = new Image();
+        img.crossOrigin = "anonymous";
+        img.onload = function () {
+          const canvas = document.createElement("canvas");
+          canvas.width = img.width;
+          canvas.height = img.height;
+          const ctx = canvas.getContext("2d");
+          ctx.drawImage(img, 0, 0);
+          const jpegDataUrl = canvas.toDataURL("image/jpeg", 0.9);
+          input.setAttribute("data-jpeg", jpegDataUrl);
+          preview.src = jpegDataUrl;
+          preview.style.display = "block";
+        };
+        img.src = e.target.result;
+      };
+      reader.readAsDataURL(file);
+    });
+  }
+
+  function generatePrintableContent(form, material) {
+    const source = document.getElementById("pdf-content");
+    const clone = source.cloneNode(true);
+
+    // Показать активный блок анализатора
     clone.querySelectorAll('.analyzer-section').forEach(section => {
       section.style.display = 'none';
     });
-    const visible = clone.querySelector(`#section-${material}`);
-    if (visible) visible.style.display = 'block';
+    const section = clone.querySelector(`#section-${material}`);
+    if (section) section.style.display = 'block';
 
-    // Обрабатываем input, select, textarea
+    // Заменить input/select/textarea на div
     clone.querySelectorAll("input, select, textarea").forEach(el => {
       let value = "—";
       if (el.type === "checkbox") {
@@ -439,53 +496,18 @@
       } else {
         value = el.value;
       }
-
       const div = document.createElement("div");
       div.textContent = value;
       div.style.marginBottom = "4px";
       el.replaceWith(div);
     });
 
-    // 🔽 Заменяем все .element-row на таблицы
+    // Скопировать динамически добавленные строки элементов
     clone.querySelectorAll(".element-row").forEach(row => {
-      const container = row.parentElement;
-      if (!container.classList.contains("table-ready")) {
-        const table = document.createElement("table");
-        table.style.width = "100%";
-        table.style.borderCollapse = "collapse";
-        table.style.marginBottom = "10px";
-        table.style.fontSize = "14px";
-
-        const thead = document.createElement("thead");
-        thead.innerHTML = `
-          <tr>
-            <th style="border:1px solid #ccc; padding:4px;">Элемент</th>
-            <th style="border:1px solid #ccc; padding:4px;">Диапазон концентрации</th>
-          </tr>
-        `;
-        table.appendChild(thead);
-
-        const tbody = document.createElement("tbody");
-        container.querySelectorAll(".element-row").forEach(row => {
-          const el = row.querySelector("input[name*='_element']");
-          const range = row.querySelector("input[name*='_range']");
-
-          const tr = document.createElement("tr");
-          tr.innerHTML = `
-            <td style="border:1px solid #ccc; padding:4px;">${el?.value || "—"}</td>
-            <td style="border:1px solid #ccc; padding:4px;">${range?.value || "—"}</td>
-          `;
-          tbody.appendChild(tr);
-        });
-
-        table.appendChild(tbody);
-        container.innerHTML = ""; // очищаем блок от старого содержимого
-        container.classList.add("table-ready");
-        container.appendChild(table);
-      }
+      row.querySelectorAll("button").forEach(btn => btn.remove()); // удалить кнопки
     });
 
-    // Добавим фото, если есть
+    // Добавить изображение, если есть
     const photoInput = document.getElementById(`installation_photo_${material}`);
     const jpegData = photoInput?.dataset?.jpeg;
     if (jpegData) {
@@ -496,12 +518,68 @@
       clone.appendChild(img);
     }
 
-    // Удаляем все кнопки
-    clone.querySelectorAll("button").forEach(btn => btn.remove());
-
     return clone;
   }
+
+  function submitForm() {
+    const form = document.getElementById("form");
+    const pdfPreview = document.getElementById("pdf-preview");
+    const email = form.email.value;
+    const material = form.material.value;
+
+    if (!email) return alert("Введите email");
+
+    const content = generatePrintableContent(form, material);
+
+    html2pdf().set({
+      html2canvas: { scale: 2, useCORS: true },
+      jsPDF: { unit: 'mm', format: 'a4', orientation: 'portrait' }
+    }).from(content).output('datauristring')
+      .then(dataUri => {
+        pdfPreview.src = dataUri;
+        pdfPreview.style.display = "block";
+        return html2pdf().set({
+          filename: 'oprosny_list.pdf',
+          html2canvas: { scale: 2, useCORS: true },
+          jsPDF: { unit: 'mm', format: 'a4', orientation: 'portrait' }
+        }).from(content).outputPdf('blob');
+      })
+      .then(blob => {
+        const file = new File([blob], "oprosny_list.pdf", { type: "application/pdf" });
+        const formData = new FormData();
+        formData.append("file", file);
+        return fetch("https://tmpfiles.org/api/v1/upload", {
+          method: "POST",
+          body: formData
+        });
+      })
+      .then(res => res.json())
+      .then(data => {
+        if (!data || !data.data || !data.data.url) throw new Error("Не удалось получить ссылку на PDF");
+        const templateParams = {
+          to: `${email}, science.techade@gmail.com`,
+          email: email,
+          company: form.company.value,
+          date: form.date.value,
+          contact_person: form.contact_person.value,
+          phone: form.phone.value,
+          country: form.country.value,
+          location: form.location.value,
+          material: material,
+          subject: "Новый опросный лист",
+          time: new Date().toLocaleString(),
+          pdf_link: data.data.url
+        };
+        return emailjs.send("service_1rnpxea", "template_sk137ts", templateParams);
+      })
+      .then(() => alert("Форма отправлена. Ссылка на PDF отправлена по email."))
+      .catch(err => {
+        console.error("Ошибка при отправке:", err);
+        alert("Ошибка: " + (err.message || err));
+      });
+  }
 </script>
+
 
 
 
